--- a/submit.css
+++ b/submit.css
@@ -303,17 +303,35 @@ nav {
 .textarea {
   width: 100%;
 }
+#field-column {
+  position: relative;
+  display: flex;
+  height: 100%;
+}
+#age-field,
+#gender-field {
+  height: 100%;
+  width: 50%;
+}
+#gender-input {
+  color: white;
+  font-family: Montserrat;
+  font-size: 16px;
+  position: absolute;
+  display: flex;
+  transform: translateY(50%);
+}
 .control {
-  margin: 0.3rem 4.5rem 1rem 2.5rem;
+  margin: 0.3rem 2.75rem 1rem 2.5rem;
 }
 input {
   max-width: 100vw;
 }
 .label {
-  padding: 0.5rem 2rem 0rem 2.5rem;
+  padding: 0.3rem 1.25rem 0rem 2.5rem;
   color: white;
   display: block;
-  font-size: 20px;
+  font-size: 22px;
   font-family: Onest;
   font-weight: 700;
 }
@@ -405,23 +423,54 @@ button.button.is-danger:hover {
 #article-3 {
   left: 50%;
 }
+#article-3 .article-title,
+#article-3 .article-body {
+  padding: 0.3rem 2.5rem 0rem 1.25rem;
+}
 #leaderboard {
+  border: 1rem;
+  border-spacing: 0vw;
+  padding: 1rem 2.5rem 1rem 1.25rem;
   font-size: 16px;
   font-family: Montserrat;
   color: white;
 }
-
-td {
+.cell-0,
+.cell-1,
+.cell-2,
+.cell-3 {
   text-align: center;
-  padding: 0.25rem 0.5rem;
+  width: fit-content;
+  padding: 1vw 1vw;
 }
 table {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
 }
-table {
-  table-layout: fixed;
+#row-0 {
+  font-style: italic;
+}
+#row-1 {
+  font-weight: 800;
+  font-size: 30px;
+}
+#row-2 {
+  font-weight: 800;
+  font-size: 28px;
+}
+#row-3 {
+  font-weight: 800;
+  font-size: 26px;
+}
+#row-1 .cell-1 {
+  font-size: 27.5px;
+}
+#row-2 .cell-1 {
+  font-size: 25px;
+}
+#row-3 .cell-1 {
+  font-size: 22.5px;
 }
 #article-download {
   position: relative;
@@ -483,7 +532,6 @@ table {
 .article-body ul {
   font-family: Montserrat;
 }
-
 .article-body ul li a {
   text-decoration: none;
   color: #ffffff;
@@ -517,6 +565,14 @@ table {
 }
 #message {
   padding: 5rem 25rem;
+}
+@media (width <= 1200px) {
+  #article-2,
+  #article-3 {
+    left: 0%;
+    width: 100%;
+    position: relative;
+  }
 }
 @media (width <= 768px) {
   @keyframes load-in2 {
@@ -636,7 +692,8 @@ table {
   .file-name,
   button,
   #button-reminder,
-  #leaderboard {
+  #leaderboard,
+  #gender-input {
     font-size: 12.5px;
   }
   #article-2,
@@ -653,6 +710,34 @@ table {
     width: 1250px;
     right: 0%;
     overflow-x: hidden;
+  }
+  .cell-0,
+  .cell-1,
+  .cell-2,
+  .cell-3 {
+    text-align: center;
+    padding: 0.5rem 1.3rem;
+  }
+  #row-1 {
+    font-weight: 800;
+    font-size: 27.5px;
+  }
+  #row-2 {
+    font-weight: 800;
+    font-size: 25.5px;
+  }
+  #row-3 {
+    font-weight: 800;
+    font-size: 23.5px;
+  }
+  #row-1 .cell-1 {
+    font-size: 25px;
+  }
+  #row-2 .cell-1 {
+    font-size: 22.5px;
+  }
+  #row-3 .cell-1 {
+    font-size: 20px;
   }
 }
 @media (width <= 550px) {
@@ -724,7 +809,8 @@ table {
   .file-name,
   button,
   #button-reminder,
-  #leaderboard {
+  #leaderboard,
+  #gender-input {
     font-size: 12.5px;
   }
   #download-1,
@@ -742,5 +828,33 @@ table {
   }
   .article {
     height: 375px;
+  }
+  .cell-0,
+  .cell-1,
+  .cell-2,
+  .cell-3 {
+    text-align: center;
+    padding: 0.5rem;
+  }
+  #row-1 {
+    font-weight: 800;
+    font-size: 25px;
+  }
+  #row-2 {
+    font-weight: 800;
+    font-size: 23px;
+  }
+  #row-3 {
+    font-weight: 800;
+    font-size: 21px;
+  }
+  #row-1 .cell-1 {
+    font-size: 22.5px;
+  }
+  #row-2 .cell-1 {
+    font-size: 20px;
+  }
+  #row-3 .cell-1 {
+    font-size: 17.5px;
   }
 }
